--- a/style.css
+++ b/style.css
@@ -140,6 +140,7 @@
             
             .max-width-container{
                 max-width: 1080px;
+                padding: 0 32px;
                 margin: 0 auto;
                 position: relative;
             }
@@ -222,10 +223,24 @@
         width: 40%;
     }
     
-    .team-member-card img{
-        width: 200px;
-        margin: 56px 0 24px 0;
+    .avatar-container{
+        position: relative;
+    }
+
+    .avatar-container img{
+        width: 170px;
+        margin: 32px 0 24px 0;
         border-radius: 50%;
+    }
+
+    .avatar-container .circle{
+        width: 170px;
+        height: 170px;
+        border-radius: 50%;
+        position: absolute;
+        top:10%;
+        left:2%;
+        border: 2px solid #E02957;
     }
     
     .step-card{
@@ -271,9 +286,8 @@
     }
     
     #hero-section{
-        min-height: 100vh;
         margin-top: -100px;
-        padding: 8em 0;
+        padding: 12em 0;
     }
     
     #hero-section .glower:nth-child(1){
@@ -304,10 +318,27 @@
         margin-top: 96px;
     }
 
-    .team-member-card img{
-        width: 50%;
+    .avatar-container{
+        position: relative;
+        width: fit-content;
+        height: fit-content;
+        margin: 0 auto;
+    }
+
+    .avatar-container img{
+        width: 200px;
         margin: 0 0 12px 0;
         border-radius: 50%;
+    }
+
+    .avatar-container .circle{
+        width: 190px;
+        height: 190px;
+        border-radius: 50%;
+        position: absolute;
+        bottom:10%;
+        left:10%;
+        border: 2px solid #E02957;
     }
     
     #how-it-works-section .multi-column-layout{
