--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,5 @@
 @import './definiciones/vars';
+@import './definiciones/animations';
 
 @import './globales/global-styles';
 @import './globales/header';
