--- a/sass/globales/_global-styles.scss
+++ b/sass/globales/_global-styles.scss
@@ -37,7 +37,7 @@
 /* layout styles globales */
         /* desktop */
         @media screen and (min-width:992px) {
-            section{
+            .section{
                 padding: 8em 0;
                 position: relative;
                 overflow: hidden;
@@ -66,7 +66,7 @@
         }
         /* mobile and tablet */
         @media screen and (max-width:991px) {
-            section{
+            .section{
                 padding: 4em 0;
                 position: relative;
                 overflow: hidden;
